[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oco"
authors = [{name = "Vol Ky", email = "vol@wilab.org.ua"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi",
    "matplotlib",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "uvicorn",
]

[project.urls]
Home = "https://github.com/proger/oco"
