[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oco"
authors = [{name = "Vol Ky", email = "vol@wilab.org.ua"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn==0.40.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mypy",
]

[project.urls]
Home = "https://github.com/proger/oco"
